regional-manifests/regions/eu-central-1/remove-deployments.yaml
apiVersion: builtin
kind: PatchTransformer
metadata: {name: remove-primary-deployments}
patch: |-
  apiVersion: apps/v1
  kind: Deployment
  metadata: {name: delete-selected-primary-deployment}
  $patch: delete
target:
  group: apps
  version: v1
  kind: Deployment
  name: adservice|benchmarkservice|cartservice|checkoutservice|currencyservice|emailservice|messageoperationsservice|productcatalogservice|recommendationservice|shippingservice
