regional-manifests/regions/eu-central-1/frontend-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-00a8a8ca7e293762b,subnet-0bc38682733e31fc2,subnet-0c5db05b05bbb1ede
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
spec:
  loadBalancerClass: service.k8s.aws/nlb
  allocateLoadBalancerNodePorts: false
  loadBalancerSourceRanges: [0.0.0.0/0]
