regional-manifests/regions/eu-central-1/remove-services.yaml
apiVersion: builtin
kind: PatchTransformer
metadata: {name: remove-primary-services}
patch: |-
  apiVersion: v1
  kind: Service
  metadata: {name: delete-selected-primary-service}
  $patch: delete
target:
  version: v1
  kind: Service
  name: benchmarkservice|messageoperationsservice|redis-cart-cluster|redis-cart-cluster-headless|redis-checkout-cluster|redis-checkout-cluster-headless
